# acorex

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  Versioning.cpp  acorex-flucoma.sln  acorex-flucoma.vcxproj  acorex-flucoma.vcxproj.filters  acorex.code-workspace  acorex.sln  acorex.vcxproj  acorex.vcxproj.filters  addons.make  build-deps.sh  build.sh  config.make  get_and_build_deps.bat  get_and_build_deps.sh  install_dependencies.sh
.github/workflows/: main-test-build-windows.yml  ontag-windows-build-draft-release.yml  windows-build.yml
acorex.xcodeproj/: project.pbxproj
docs/: CNAME  README.md  index.html  styles.css
src/: AnalyseCorpus.h  AnalyserMenu.cpp  AnalyserMenu.h  Corpus.cpp  Corpus.h  CorpusController.cpp  CorpusController.h  DataController.cpp  DataController.h  ExplorerMenu.cpp  ExplorerMenu.h  ListAudioFilesInDirectory.cpp  ListAudioFilesInDirectory.h  PointCloudAndFileControl.cpp  PointCloudAndFileControl.h  UMAP.h  Versioning.cpp  Versioning.h  app.cpp  app.h  main.cpp  ofApp.cpp  ofApp.h
src-OF/: ExplorerMenu.cpp  main.cpp  ofApp.cpp
src-OF/Analyser/: Controller.cpp  UMAP.cpp
src-OF/Explorer/: LiveView.h  SpaceDefs.h
src-OF/Utils/: DatasetConversion.cpp  DimensionBounds.h
src/Analyse/: Controller.cpp  Controller.h  ControllerMenu.cpp  ControllerMenu.h  GenAnalysis.cpp  GenAnalysis.h  UMAP.cpp  UMAP.h
src/Analyser/: Controller.cpp  Controller.h  ControllerMenu.cpp  ControllerMenu.h  GenAnalysis.cpp  GenAnalysis.h  UMAP.cpp  UMAP.h
src/Corpus/: Analyse.cpp  Analyse.h  Controller.cpp  Controller.h  Data.h  GenAnalysis.cpp  JSON.cpp  JSON.h  Metadata.h  UMAP.cpp  UMAP.h
src/Explore/: RawView.cpp  RawView.h
src/Explorer/: AudioPlayback.cpp  AudioPlayback.h  LiveView.cpp  LiveView.h  PointPicker.cpp  PointPicker.h  RawView.cpp  RawView.h  SpaceDefs.h
src/Interface/: ControllerMenu.cpp  ControllerMenu.h  ControllerUI.cpp  ControllerUI.h  (+1 more)
(+18 files in other folders)
